--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!-- Copyright (c) 2023 SobaZino | Mehran Nosrati -->
+
 
 <html>
   <head>
-    <title>HELD KARP</title>
+    <title>TSP PROJECT</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="style.css" />
@@ -13,7 +13,7 @@
         <path class="DLsvg" fill="var(--w)" d="M8 256c0 136.966 111.033 248 248 248s248-111.034 248-248S392.966 8 256 8 8 119.033 8 256zm248 184V72c101.705 0 184 82.311 184 184 0 101.705-82.311 184-184 184z"></path>
       </svg>
     </div>
-    <a href="https://github.com/sobazino/TSP">
+    <a href="https://github.com/deepthings77/tsp_project_ada_project">
       <div class="HB" style="right: 0; border-radius: 0 0 0 10px">
         <svg viewBox="0 0 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
           <defs></defs>
@@ -27,9 +27,9 @@
     </a>
     <div class="MAIN">
       <div class="HEAD">
-        <p style="color: var(--f)">IN THE NAME OF GOD</p>
-        <h1>HELD KARP</h1>
-        <p>\ S O B A Z I N O /</p>
+        <p style="color: var(--f)">Travelling Salesman Problem</p>
+        <h1>Deepak Kumawat & Jatin Rai</h1>
+        <p>22BCS034 & 22BCS049</p>
       </div>
       <div class="BOX">
         <div class="CUBE" style="height: 550px; padding: 0">
