--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="MAIN">
       <div class="HEAD">
         <p style="color: var(--f)">Travelling Salesman Problem</p>
-        <h1>Deepak Kumawat & Jatin Rai</h1>
+        <p>Deepak Kumawat & Jatin Rai</p>
         <p>22BCS034 & 22BCS049</p>
       </div>
       <div class="BOX">
