--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
         </div>
         <div class="CUBE" id="DMATRIX">
           <div class="IS">
-            <button onclick="SETTEST(0);" class="BTZ BIC BIF">EXAMPLE 1</button>
-            <button onclick="SETTEST(1);" class="BTZ BIC BIF">EXAMPLE 2</button>
+            <button onclick="SETTEST(0);" class="BTZ BIC BIF">TRY EXAMPLE 1</button>
+            <button onclick="SETTEST(1);" class="BTZ BIC BIF">TRY EXAMPLE 2</button>
           </div>
-          <h2>DISTANCE MATRIX:</h2>
+          <h2>EDIT MATRIX ( Click on Given Field ):</h2>
           <textarea class="BIT BIF" id="INPUT"></textarea>
         </div>
       </div>
