--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <path class="DLsvg" fill="var(--w)" d="M8 256c0 136.966 111.033 248 248 248s248-111.034 248-248S392.966 8 256 8 8 119.033 8 256zm248 184V72c101.705 0 184 82.311 184 184 0 101.705-82.311 184-184 184z"></path>
       </svg>
     </div>
-    <a href="https://github.com/deepthings77/tsp_project_ada_projec">
+    <a href="https://github.com/deepthings77/">
       <div class="HB" style="right: 0; border-radius: 0 0 0 10px">
         <svg viewBox="0 0 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
           <defs></defs>
